    * Added ChangeSet.removeCommitted() to filter already-committed
      troves from a changeset.
    * The bootstrap python module dependency discovery proxy now
      provides additional useful informational messages to aid
      debugging.
    * Conary proxies are responsible for reassembling the content for
      changesets containing capsules. (CNY-3228, CNY-3259)

  o Bug Fixes:
    * In-core changesets could be merged into a ReadOnlyChangeSet a single
      time. After multiple merges reset() no longer reset the underlying
      in-core changeset.
    * Conary no longer exits with an unhandled KeyError exception if
      an unknown dependency type is encountered in the local
      database. (CNY-3232)
    * Decompression with xz is preferred over unlzma, as CNY-3194
      intended. (CNY-3231)
    * rpm2cpio now correctly handles rpm packages compressed with xz.
      (CNY-3234)
    * Unpacking an RPM with addArchive or addCapsule now functions
      correctly even if the CPIO archive in the RPM contains a
      non-traversable directory. (CNY-3244)
    * When running an external entitlement generator, use /dev/null for
      stdin instead of closing the file descriptor.
    * Added logging to several source actions to ensure that some output
      is provided to make debugging build failures easier.
    * Call lstat() instead of stat() to deal with circular links. (CNY-3251)
    * Bootstrapping python dependencies now uses python source intead
      of a version-specific compiled python file.
    * The addCapsule source action properly verifies GPG keys when a keyid
      argument is supplied. (CNY-3258)
    * Commiting signed troves to repositories without signatures no longer
      causes repository tracebacks.
    * Repositories no longer store duplicate file path information when
      a path is committed for the first time by a job which references it
      multiple times

  o Internal Changes: