@@ -31,7 +31,7 @@ def displayTroves(db, cfg, troveSpecs = [], pathList = [],
                   # file options
                   ls = False, lsl = False, ids = False, sha1s = False, 
                   tags = False, fileDeps = False, fileVersions = False,
-                  fileFlavors = False,
+                  fileFlavors = False, capsules = False,
                   # collection options
                   showTroves = False, recurse = None, showAllTroves = False,
                   weakRefs = False, showTroveFlags = False,
@@ -114,7 +114,7 @@ def displayTroves(db, cfg, troveSpecs = [], pathList = [],
 
     dcfg.setFileDisplay(ls=ls, lsl=lsl, ids=ids, sha1s=sha1s, tags=tags,
                         fileDeps=fileDeps, fileVersions=fileVersions,
-                        fileFlavors=fileFlavors)
+                        fileFlavors=fileFlavors, capsules=capsules)
 
 
     recurseOne = showTroves or showAllTroves or weakRefs or showTroveFlags
