@@ -45,7 +45,7 @@ def displayTroves(cfg, troveSpecs=[], pathList = [], whatProvidesList=[],
                   # file options
                   ls = False, lsl = False, ids = False, sha1s = False, 
                   tags = False, fileDeps = False, fileVersions = False,
-                  fileFlavors = False,
+                  fileFlavors = False, capsules = False,
                   # collection options
                   showTroves = False, recurse = None, showAllTroves = False,
                   weakRefs = False, showTroveFlags = False, 
@@ -147,7 +147,7 @@ def displayTroves(cfg, troveSpecs=[], pathList = [], whatProvidesList=[],
 
     dcfg.setFileDisplay(ls=ls, lsl=lsl, ids=ids, sha1s=sha1s, tags=tags,
                         fileDeps=fileDeps, fileVersions=fileVersions,
-                        fileFlavors=fileFlavors)
+                        fileFlavors=fileFlavors, capsules=capsules)
 
     recurseOne = showTroves or showAllTroves or weakRefs
     if recurse is None and not recurseOne and troveSpecs:
